2002-03-05  Roland McGrath  <roland@frob.com>

	* kern/bootstrap.c: Include <alloca.h>.

2002-03-04  Roland McGrath  <roland@frob.com>

	* Makefile.in (%_interface.h %_server.c: %.srv): Pass -sheader switch
	to mig, not -header.

2001-10-13  Marcus Brinkmann  <marcus@gnu.org>

	* debian/changelog: Update for next release.

2001-10-07  Roland McGrath  <roland@frob.com>

	* ddb/db_access.c: Fix obsolescent #else/#endif syntax.
	* device/dev_name.c: Likewise.
	* device/dev_pager.c: Likewise.
	* device/ds_routines.c: Likewise.
	* i386/i386/i386asm.sym: Likewise.
	* include/device/device_reply.defs: Likewise.
	* include/mach/memory_object.defs: Likewise.
	* include/mach/memory_object_default.defs: Likewise.

	* i386/i386/locore.S: Fix sloppy asm syntax to avoid warnings from
	newer assembler (%ecx -> %cl in byte insns).

	* kern/bootstrap.c (bootstrap_create): Fix inverted test logic for
	compatibility case.  Ignore trailing newlines after space for
	compatibility detection.
	Reported by Neal H Walfield <neal@cs.uml.edu>.

2001-10-06  Marcus Brinkmann  <marcus@gnu.org>

	* README: Replace `GNU mach' by `GNU Mach', and remove
	obsolete paragraph about kmsg device.

2001-10-06  Marcus Brinkmann  <marcus@gnu.org>

	* doc/mach.texi: Fix direntry.

2001-10-05  Marcus Brinkmann  <marcus@gnu.org>

	* doc/mach.texi: Replace `path name' by `file name' in one place.
	Replace `illegal' by `invalid' and `to to' by `to' everwhere.

	* debian/changelog: Prepare for next release.

2001-10-04  Marcus Brinkmann  <marcus@gnu.org>

	* doc: New directory.
	* doc/Makefile.in: New file.
	* doc/gpl.texi: Likewise.
	* doc/fdl.texi: Likewise.
	* doc/mach.texi: Likewise.
	* configure.in: Add doc/Makefile to AC_OUTPUT call.
	* configure: Regenerated.

	* Makefile.in (dist): Create directories doc and debian.
	(doc-files): New variable with documentation files.
	(debian-files): New variable with Debian packaging files.

	* debian/rules (stamp-build): Build documentation.